# ace

./: .clang-tidy  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
editor/core/mesh_import/: CMakeLists.txt
engine/core/: CMakeLists.txt
engine/core/base/: CMakeLists.txt  basetypes.hpp  bitflags.hpp  hash.hpp
engine/core/base/platform/: config.hpp  export.hpp  thread.hpp
engine/core/cmd_line/: CMakeLists.txt  parser.cpp  parser.h
engine/core/context/: CMakeLists.txt  context.hpp
engine/core/filesystem/: CMakeLists.txt  cache.hpp  filesystem.cpp  filesystem.h  syncer.cpp  syncer.h  watcher.cpp  watcher.h
engine/core/graphics/: CMakeLists.txt  debugdraw.cpp  debugdraw.h  format.cpp  format.h  frame_buffer.cpp  frame_buffer.h  graphics.cpp  graphics.h  handle_impl.h  index_buffer.cpp  index_buffer.h  program.cpp  program.h  render_pass.cpp  render_pass.h  render_view.cpp  render_view.h  render_view_keys.h  shader.cpp  shader.h  texture.cpp  texture.h  uniform.cpp  uniform.h  vertex_buffer.cpp  vertex_buffer.h  vertex_decl.cpp  vertex_decl.h
engine/core/graphics/utils/: aviwriter.h  bgfx_utils.cpp  bgfx_utils.h  common.h  cube_atlas.cpp  cube_atlas.h  packrect.h
engine/core/logging/: CMakeLists.txt  logging.cpp  logging.h
engine/core/math/: CMakeLists.txt  bbox.cpp  bbox.h  bbox_extruded.cpp  bbox_extruded.h  bsphere.cpp  bsphere.h  frustum.cpp  frustum.h  math.h  math_types.h  matrix_recompose.hpp  plane.cpp  plane.h  transform.hpp
engine/core/math/detail/: glm_includes.h
engine/core/memory/: CMakeLists.txt
engine/core/reflection/: CMakeLists.txt  reflection.cpp  reflection.h  registration.h
engine/core/serialization/: CMakeLists.txt  associative_archive.h  binary_archive.h  cereal_optional_nvp.h  serialization.cpp  serialization.h
engine/core/serialization/archives/: yaml.hpp
engine/core/serialization/types/: array.hpp  bitset.hpp  chrono.hpp  complex.hpp  deque.hpp  forward_list.hpp  functional.hpp  list.hpp  map.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  variant.hpp  vector.hpp
engine/core/service/: CMakeLists.txt  service.cpp  service.h
engine/core/simulation/: CMakeLists.txt  simulation.cpp  simulation.h
engine/core/string_utils/: CMakeLists.txt  utils.cpp  utils.h
engine/core/subprocess/: CMakeLists.txt  subprocess.hpp
engine/core/type_index/: CMakeLists.txt  crc.hpp  type_index.cpp  type_index.h
engine/core/uuid/: CMakeLists.txt  uuid.cpp  uuid.h
engine/engine/: CMakeLists.txt  engine.cpp  engine.h  events.cpp  events.h  pch.h
engine/engine/animation/: animation.h
engine/engine/animation/gizmos/: gizmos.cpp  gizmos.h
engine/engine/assets/: asset_flags.h  asset_handle.h  asset_manager.cpp  asset_manager.h  asset_storage.h  asset_watcher.cpp  asset_watcher.h
engine/engine/assets/impl/: asset_compiler.cpp  asset_compiler.h  asset_extensions.h  asset_reader.cpp  asset_reader.h  asset_writer.cpp  asset_writer.h
engine/engine/audio/: audio_clip.cpp  audio_clip.h
engine/engine/defaults/: defaults.cpp  defaults.h
engine/engine/ecs/: ecs.cpp  ecs.h  prefab.h  scene.cpp  scene.h
engine/engine/ecs/components/: animation_component.cpp  animation_component.h  basic_component.h  box_collider_component.cpp  box_collider_component.h  camera_component.cpp  camera_component.h  id_component.h  light_component.cpp  light_component.h  model_component.cpp  model_component.h  physics_component.cpp  physics_component.h  prefab_component.h  reflection_probe_component.cpp  reflection_probe_component.h  rigidbody_component.cpp  rigidbody_component.h  test_component.h  transform_component.cpp  transform_component.h
engine/engine/ecs/impl/: entt.hpp
engine/engine/ecs/systems/: animation_system.cpp  animation_system.h  atmospheric_pass.cpp  atmospheric_pass.h  atmospheric_pass_perez.cpp  atmospheric_pass_perez.h  bone_system.cpp  bone_system.h  camera_system.cpp  camera_system.h  deferred_rendering.cpp  deferred_rendering.h  physics_system.cpp  physics_system.h  reflection_probe_system.cpp  reflection_probe_system.h  rendering_path.cpp  rendering_path.h  systems.cpp  systems.h  transform_system.cpp  transform_system.h
engine/engine/meta/: meta.cpp  meta.h
engine/engine/meta/animation/: animation.cpp  animation.hpp
engine/engine/meta/assets/: asset_database.cpp  asset_database.hpp  asset_handle.hpp
engine/engine/meta/audio/: audio_clip.cpp  audio_clip.hpp
engine/engine/meta/core/: meta.h
engine/engine/meta/ecs/: entity.cpp  entity.hpp
engine/engine/meta/physics/: physics_material.cpp  physics_material.hpp
engine/engine/meta/rendering/: camera.cpp  camera.hpp  light.cpp  light.hpp  material.cpp  material.hpp  mesh.cpp  mesh.hpp  model.cpp  model.hpp  program.cpp  program.hpp  reflection_probe.cpp  reflection_probe.hpp  standard_material.cpp  standard_material.hpp  texture.cpp  texture.hpp
engine/engine/meta/scripting/: script.cpp  script.hpp
engine/engine/meta/settings/: settings.cpp  settings.hpp
engine/engine/physics/: physics_material.cpp  physics_material.h
engine/engine/physics/gizmos/: gizmos.cpp  gizmos.h
engine/engine/profiler/: profiler.cpp  profiler.h
engine/engine/rendering/: camera.cpp  camera.h  gpu_program.cpp  gpu_program.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  reflection_probe.h  render_window.cpp  render_window.h  renderer.cpp  renderer.h  shadow.cpp  shadow.h
engine/engine/rendering/generator/: any_generator.hpp  any_mesh.cpp  any_mesh.hpp  any_path.cpp  any_path.hpp  any_shape.cpp  any_shape.hpp  axis.hpp  axis_flip_mesh.hpp  edge.hpp  (+121 more)
engine/engine/scripting/: script.h  script_glue.cpp  script_glue.h  script_system.cpp  script_system.h
engine/engine/settings/: settings.h
engine/engine/threading/: threader.cpp  threader.h
game/game/: CMakeLists.txt  game.cpp  game.h  main.cpp
game/game/loader/: loader.cpp  loader.h
game/game/runner/: runner.cpp  runner.h
launcher/: CMakeLists.txt  main.cpp
version/: CMakeLists.txt  version.cpp  version.h
(+377 files in other folders)
