add_subdirectory(base)
add_subdirectory(memory)
add_subdirectory(context)
add_subdirectory(filesystem)
add_subdirectory(service)
add_subdirectory(cmd_line)
add_subdirectory(graphics)
add_subdirectory(simulation)
add_subdirectory(logging)
add_subdirectory(math)
add_subdirectory(uuid)
add_subdirectory(serialization)
add_subdirectory(reflection)
add_subdirectory(string_utils)
